C/DEV3/interros/cours/annees_precedentes/exam-2017-08-23/code18_results.txt
Résultat de la compilation: 
code18.cpp: In function ‘int main()’:
code18.cpp:9:15: error: narrowing conversion of ‘2.1000000000000001e+0’ from ‘double’ to ‘int’ inside { } [-Wnarrowing]
     int a3{2.1};
               ^
(ERREUR: la compilation a échouée!)
